--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -30,17 +30,24 @@ body {
 #logs {
   position: absolute;
   top: 80px;
-  bottom: 30px;
+  bottom: 60px;
   width: 100%;
   overflow-y: auto;
   overflow-x: hidden;
   border-top: #888888 4px solid;
+}
+#level-filters {
+  position: absolute;
+  height: 24px;
+  bottom: 30px;
+  padding-left: 10px;
 }
 #toolbox {
   position: fixed;
   bottom: 0px;
   height: 30px;
   width: 100%;
+  padding-left: 10px;
   overflow: hidden;
   background-color: #CCCCCC;
 }
@@ -96,7 +103,7 @@ td {
 .lock-div {
   position: fixed;
   bottom: 0;
-  right: 0;
+  right: 10px;
 }
 p {
   margin: 0;
